@@ -16,6 +16,8 @@ TRUNK
 * turned off matrix and algebra substitution until a new proposal is decided
 * snow and snowfall are no longer required packages
 * added cycle detection to algebra expressions
+* mxEval() with compute = TRUE will assign dimnames to algebras
+* added dimnames checking of algebras in the front-end before optimization is called
 
 Release 0.1.3-776
 =============
